initialized the database, added some methods for User class and tests for those methods

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
+<link rel="stylesheet" href="../static/stylesheet.css">
+
 <body>
 
 </body>
