--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 
-<link rel="stylesheet" href="../static/stylesheet.css">
+<link rel="stylesheet" href="../static/css/style.css">
 
 <body>
-
+    "Hello, World!"
 </body>
 </html>
